test/tests/compiler/8_loops/invalid_parse/do_missing_semicolon.plx
pub fn main(none) i32 {
    loop a: i32 while 1 {
        break
    }
    return 0
}
